--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+structopt = "0.3.18"
+carapax = "0.8.0"
+log = "0.4.11"
+fern = { version = "0.6.0", features = ["colored"] }
+chrono = "0.4.19"
 
 [[bin]]
 name = "rusty-manager-bot"
