--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ carapax = "0.8.0"
 log = "0.4.11"
 fern = { version = "0.6.0", features = ["colored"] }
 chrono = "0.4.19"
+tokio = { version = "0.2.4", features = ["full"] }
+async-trait = "0.1.40"
 
 [[bin]]
 name = "rusty-manager-bot"
