--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ fern = { version = "0.6.0", features = ["colored"] }
 chrono = "0.4.19"
 tokio = { version = "0.2.4", features = ["full"] }
 async-trait = "0.1.40"
+snafu = "0.6.9"
 
 [[bin]]
 name = "rusty-manager-bot"
