--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono = "0.4.19"
 tokio = { version = "0.2.4", features = ["full"] }
 async-trait = "0.1.40"
 snafu = "0.6.9"
+clap = "2.33.3"
 
 [[bin]]
 name = "rusty-manager-bot"
