--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "0.2.4", features = ["full"] }
 async-trait = "0.1.40"
 snafu = "0.6.9"
 clap = "2.33.3"
+futures-util = "0.3.5"
 
 [[bin]]
 name = "rusty-manager-bot"
