--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,29 @@
 [package]
-name = "rusty_manager_bot"
-version = "0.6.2"
+name = "io_proxy_bot"
+version = "0.7.0"
 authors = ["Ilya Venner <ilyavenner@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.21"
-carapax = "0.10.0"
-log = "0.4.14"
-chrono = "0.4.19"
-async-trait = "0.1.42"
-snafu = "0.6.10"
-clap = "2.33.3"
+structopt = "0.3"
+carapax = "0.10"
+log = "0.4"
+chrono = "0.4"
+async-trait = "0.1"
+snafu = "0.6"
+clap = "2.33"
+humantime = "2.1"
 
 [dependencies.tokio]
-version = "1.2.0"
+version = "1"
 features = ["full"]
 
 [dependencies.fern]
-version = "0.6.0"
+version = "0.6"
 features = ["colored"]
 
 [[bin]]
-name = "rusty-manager-bot"
+name = "io-proxy-bot"
 path = "src/main.rs"
